--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "^13.4.19",
+    "@tanstack/react-query": "^5.24.1",
     "autoprefixer": "10.4.15",
     "axios": "^1.6.7",
     "eslint": "8.48.0",
