--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-loader-spinner": "^6.1.6",
+    "react-multi-date-picker": "^4.4.1",
     "react-otp-input": "^3.1.1",
+    "react-select": "^5.8.0",
+    "react-tag-input-component": "^2.0.2",
     "tailwindcss": "3.3.3"
   }
 }
